--- a/Ui/Ui.Desktop/Resources/Styles/PageStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/PageStyle.xaml
@@ -5,6 +5,8 @@
         <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Accent4}" />
         <Setter Property="MinHeight" Value="450" />
         <Setter Property="MinWidth" Value="700" />
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <!-- update FontFamily in FontStyle.xaml as well -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Page}">
