--- a/Ui/Ui.Desktop/Resources/Styles/RollableObjectStyle.xaml
+++ b/Ui/Ui.Desktop/Resources/Styles/RollableObjectStyle.xaml
@@ -5,8 +5,8 @@
     <SolidColorBrush x:Key="ListBox.Static.Border" Color="#FFABADB3" />
     <SolidColorBrush x:Key="ListBox.Disabled.Background" Color="#FFFFFFFF" />
     <SolidColorBrush x:Key="ListBox.Disabled.Border" Color="#FFD9D9D9" />
-    
-    <Style x:Key="TalentListBoxStyle" TargetType="{x:Type ListBox}">
+
+    <Style x:Key="RollableObjectListBoxStyle" TargetType="{x:Type ListBox}">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="{StaticResource ListBox.Static.Border}" />
         <Setter Property="BorderThickness" Value="0" />
@@ -43,7 +43,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -54,54 +54,42 @@
         </Setter>
     </Style>
 
-    <!--<SolidColorBrush x:Key="Item.MouseOver.Background" Color="LightGreen" />
-    <SolidColorBrush x:Key="Item.MouseOver.Border" Color="ForestGreen" />-->
     <SolidColorBrush x:Key="Item.MouseOver.Background" Color="#1F26A0DA" />
-    <SolidColorBrush x:Key="Item.MouseOver.Border" Color="#a826A0Da" />
+    <SolidColorBrush x:Key="Item.MouseOver.Border" Color="Black" />
     <SolidColorBrush x:Key="Item.SelectedInactive.Background" Color="Transparent" />
     <SolidColorBrush x:Key="Item.SelectedInactive.Border" Color="Transparent" />
     <SolidColorBrush x:Key="Item.SelectedActive.Background" Color="Transparent" />
     <SolidColorBrush x:Key="Item.SelectedActive.Border" Color="Transparent" />
-    <Style x:Key="TalentListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
+    <Style x:Key="RollableObjectListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Height" Value="30" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <Border x:Name="Bd" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Padding="0" SnapsToDevicePixels="true">
-                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    <Border x:Name="Bd"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Background="{TemplateBinding Background}"
+                            Padding="0"
+                            SnapsToDevicePixels="true">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Border>
                     <ControlTemplate.Triggers>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsMouseOver" Value="True" />
                             </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{StaticResource Item.MouseOver.Background}" />
                             <Setter Property="BorderBrush" TargetName="Bd" Value="{StaticResource Item.MouseOver.Border}" />
+                            <Setter Property="CornerRadius" TargetName="Bd" Value="4" />
                         </MultiTrigger>
-                        <!--<MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="Selector.IsSelectionActive" Value="False" />
-                                <Condition Property="IsSelected" Value="True" />
-                            </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{StaticResource Item.SelectedInactive.Background}" />
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{StaticResource Item.SelectedInactive.Border}" />
-                        </MultiTrigger>
-                        <MultiTrigger>
-                            <MultiTrigger.Conditions>
-                                <Condition Property="Selector.IsSelectionActive" Value="True" />
-                                <Condition Property="IsSelected" Value="True" />
-                            </MultiTrigger.Conditions>
-                            <Setter Property="Background" TargetName="Bd" Value="{StaticResource Item.SelectedActive.Background}" />
-                            <Setter Property="BorderBrush" TargetName="Bd" Value="{StaticResource Item.SelectedActive.Border}" />
-                        </MultiTrigger>-->
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="TextElement.Foreground" TargetName="Bd" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
                         </Trigger>
