--- a/Ui/Ui.Desktop/UserControls/AttributeRollControl.xaml
+++ b/Ui/Ui.Desktop/UserControls/AttributeRollControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PhexensWuerfelraum.Ui.Desktop.UserControls.TrialRollControl"
+﻿<UserControl x:Class="PhexensWuerfelraum.Ui.Desktop.UserControls.AttributeRollControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,9 +6,10 @@
              mc:Ignorable="d"
              Height="28">
     <Border Background="Transparent" BorderBrush="DarkGray" BorderThickness="1" CornerRadius="4">
-        <Grid MouseLeftButtonUp="RollButton_MouseLeftButtonUp" Background="Transparent" ToolTip="{Binding Path=ToolTip}">
+        <Grid MouseLeftButtonUp="RollButton_MouseLeftButtonUp" Background="Transparent" ToolTip="{Binding Path=Name}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="185" />
+                <ColumnDefinition Width="32" />
+                <ColumnDefinition Width="32" />
                 <ColumnDefinition Width="32" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -21,10 +22,15 @@
             <Border x:Name="clipMask" Background="White" CornerRadius="4" Padding="0" Margin="0" />
 
             <Viewbox Grid.Column="0" Grid.Row="0" Margin="0">
-                <Label Content="{Binding Path=Name}" FontSize="12" />
+                <Label Content="{Binding Path=NameShort}" FontSize="12" />
             </Viewbox>
+
             <Border Grid.Column="1" Grid.Row="0" BorderThickness="1,0,0,0" BorderBrush="DarkGray">
                 <Label Content="{Binding Path=Value}" Background="WhiteSmoke" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
+            </Border>
+
+            <Border Grid.Column="2" Grid.Row="0" BorderThickness="1,0,0,0" BorderBrush="DarkGray">
+                <TextBox Text="{Binding Path=TempMod, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Background="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0" />
             </Border>
         </Grid>
     </Border>
