--- a/Ui/Ui.Desktop/UserControls/TrialRollControl.xaml
+++ b/Ui/Ui.Desktop/UserControls/TrialRollControl.xaml
@@ -3,8 +3,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:converters="clr-namespace:PhexensWuerfelraum.Ui.Desktop.Converters"
              mc:Ignorable="d"
              Height="28">
+    <UserControl.Resources>
+        <converters:TalentValueToColorConverter x:Key="TalentValueToColorConverter" />
+    </UserControl.Resources>
+    
     <Border Background="Transparent" BorderBrush="DarkGray" BorderThickness="1" CornerRadius="4">
         <Grid MouseLeftButtonUp="RollButton_MouseLeftButtonUp" Background="Transparent" ToolTip="{Binding Path=ToolTip}">
             <Grid.ColumnDefinitions>
@@ -24,7 +29,13 @@
                 <Label Content="{Binding Path=Name}" FontSize="12" />
             </Viewbox>
             <Border Grid.Column="1" Grid.Row="0" BorderThickness="1,0,0,0" BorderBrush="DarkGray">
-                <Label Content="{Binding Path=Value}" Background="WhiteSmoke" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
+                <Label 
+                    Content="{Binding Path=Value}" 
+                    Foreground="{Binding Value, Converter={StaticResource TalentValueToColorConverter}}" 
+                    Background="WhiteSmoke" 
+                    HorizontalContentAlignment="Center" 
+                    VerticalContentAlignment="Center" 
+                    FontWeight="Bold" />
             </Border>
         </Grid>
     </Border>
