--- a/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
+++ b/Ui/Ui.Desktop/Views/ChatnRollPage.xaml
@@ -74,13 +74,15 @@
     <Grid ScrollViewer.CanContentScroll="True" ScrollViewer.VerticalScrollBarVisibility="Visible">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="22" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="455" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" x:Name="TopChatContent">
+        <Grid Grid.Row="0" Grid.Column="0" x:Name="TopChatContent">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="140" />
@@ -392,7 +394,7 @@
             <!--#endregion-->
         </Grid>
 
-        <Canvas Grid.Row="1">
+        <Canvas Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
             <!-- canvas magic: https://stackoverflow.com/a/19711950/7557790 -->
             <ScrollViewer
                 Name="TrialScrollViewer"
@@ -403,43 +405,8 @@
                 HorizontalAlignment="Center"
                 Template="{StaticResource ScrollViewerHorizontalOnTopTemplate}"
                 PreviewMouseWheel="Trials_PreviewMouseWheel">
+                
                 <StackPanel Orientation="Vertical">
-                    <ItemsControl ItemsSource="{Binding Character.ListeVorteile}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel
-                                    Orientation="Horizontal"
-                                    HorizontalAlignment="Left"
-                                    IsItemsHost="True" />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Border Margin="2" Padding="5 2 5 2" BorderThickness="1" BorderBrush="Black" Background="DarkGreen" CornerRadius="4">
-                                    <TextBlock Text="{Binding Text}" Grid.Column="0" Foreground="WhiteSmoke" />
-                                </Border>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-
-                    <ItemsControl ItemsSource="{Binding Character.ListeNachteile}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel
-                                    Orientation="Horizontal"
-                                    HorizontalAlignment="Left"
-                                    IsItemsHost="True" />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <Border Margin="2" Padding="5 2 5 2" BorderThickness="1" BorderBrush="Black" Background="DarkRed" CornerRadius="4">
-                                    <TextBlock Text="{Binding Text}" Grid.Column="0" Foreground="WhiteSmoke" />
-                                </Border>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-
                     <StackPanel
                         Orientation="Horizontal"
                         HorizontalAlignment="Center">
@@ -620,5 +587,14 @@
                 </StackPanel>
             </ScrollViewer>
         </Canvas>
+
+        <Button Grid.Row="0" Grid.Column="2" Command="{Binding ToggleDetailsFlyOutCommand}">
+            <TextBlock FontWeight="Bold" FontSize="12" Margin="-3 0 0 0">
+                <TextBlock.LayoutTransform>
+                    <RotateTransform Angle="90" />
+                </TextBlock.LayoutTransform>
+                ⯆⯆⯆   Details   ⯆⯆⯆
+            </TextBlock>
+        </Button>
     </Grid>
 </Page>
